# LLMany

./: .gitignore  .pre-commit-config.yaml  API.md  CONTRIBUTING.md  PRESENTATION.md  README.md  electron.js  eslint.config.js  package-lock.json  package.json  run-mypy.sh  tailwind.config.js
backend/: llmany_backend.db  mypy.ini  pyproject.toml
backend/llmany_backend/: DatabaseHandlerFactory.py  ModelHandlerFactory.py  Request.py  RequestHandler.py  __init__.py  database_handler.py  database_handler_factory.py  llmany_request.py  main.py  model_handler.py  model_handler_factory.py  request.py  request_handler.py
backend/llmany_backend/ModelHandlers/: AnthropicHandler.py  GoogleHandler.py  OpenAIHandler.py
backend/llmany_backend/Requests/: AllChatRequsest.py  ChatHistoryRequest.py  DeleteChatRequest.py  MessageRequest.py  NewChatRequest.py
backend/llmany_backend/database_handlers/: __init__.py  sqlite_handler.py
backend/llmany_backend/llmany_requests/: add_api_key_request.py  all_chats_request.py  chat_history_request.py  check_api_key_request.py  delete_chat_request.py  message_request.py  new_chat_request.py  remove_api_key_request.py
backend/llmany_backend/model_handlers/: __init__.py  anthropic_handler.py  deepseek_handler.py  google_handler.py  grok_handler.py  huggingface_handler.py  openai_handler.py  qwen_handler.py
backend/llmany_backend/requests/: __init__.py  add_api_key_request.py  all_chat_request.py  all_chats_request.py  delete_chat_request.py  (+5 more)
backend/tests/: conftest.py  test_database_handler_factory.py  test_model_handler_factory.py  test_request_handler.py
(+53 files in other folders)
