[tool.poetry]
name = "llmany-backend"
version = "0.1.0"
description = ""
authors = ["Oskar Kulinski", "Kajetan Ożóg", "Michał Smorągiewicz"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
pytest = "^8.3.3"
pytest-mock = "^3.14.0"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
